--- a/style.css
+++ b/style.css
@@ -1,21 +1,24 @@
-*{
-   margin-left: 3%;
-   margin-right: 1.5%;
-   margin: 2%;
+
+body{
+    margin-left: 20px;
+    margin-right: 20px;
 }
 .topsection p,h1 {
     text-align:center;
+    position: relative;
     
     
-    
-
 }  
 .topsection img{   
-    width: 190px;
+    position: absolute;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    width: 120px;
     float: left;
-    position: relative;
-    bottom: 40px;
-    left: 27%;
+    right: 60%;
+    
+    
     
     
     
@@ -24,20 +27,20 @@
     margin-top: 50px ;
     font-size: 18 px;   
     font-weight: 1000;
-    display: inline-block;
     letter-spacing: 15px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
+    text-align: center;
     
 }
  .title{
-    background-color: rgb(25, 103, 213);
+    background-color: rgb(203, 217, 224);
     border-radius: 2px;
     text-align: center;
     border: 1px solid black ;
     max-width: 100%;
     margin-bottom: 0;
     font-size: 20px;
+    
     
 }
 
@@ -48,7 +51,47 @@
 }
 
 
+
 .whole_table{
     border: 1px solid black;
-    margin-top: 0;
+ 
+}
+
+.secondpart_table table th{
+    background-color: aqua;
+    padding: .5rem;    
+    text-align: center;
+    
+    max-width: 100%;
+
+}
+.secondpart_table table {
+    width: 100%; 
+    border-collapse: collapse;
+    border: solid;
+    margin-top: 0%;
+    
+
+}
+
+.courses_table table {
+    width: 100%;
+    border-collapse: collapse;
+    
+}
+.courses_table{
+    border: 2px solid black;
+}
+
+.courses_table table td,
+.courses_table table th {
+    
+    padding: 10px; 
+    text-align: left; 
+    flex: 1;
+    
+    
+}
+.courses_table table td{
+    padding-left: 40px;
 }
