--- a/style.css
+++ b/style.css
@@ -174,6 +174,9 @@ body{
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
+.right table tr td {
+    text-align: center;
+}
 .right p {
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
